objects/Phone__x.object
<CustomObject>
    <description>phones</description>
    <externalDataSource>Mobile_Devices</externalDataSource>
    <externalName>phones</externalName>
    <fields>
        <fullName>Brand__c</fullName>
        <description>Brand</description>
        <externalDeveloperName>Brand</externalDeveloperName>
        <label>Brand</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhoneNumber__c</fullName>
        <description>PhoneNumber</description>
        <externalDeveloperName>PhoneNumber</externalDeveloperName>
        <label>PhoneNumber</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UUID__c</fullName>
        <description>UUID</description>
        <externalDeveloperName>UUID</externalDeveloperName>
        <label>UUID</label>
        <length>18</length>
        <referenceTargetField>User.Phone_UUID__c</referenceTargetField>
        <referenceTo>User</referenceTo>
        <relationshipName>phones</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <label>phones</label>
    <pluralLabel>phones</pluralLabel>
</CustomObject>